module migration for tests